--- a/media-queries.css
+++ b/media-queries.css
@@ -2,6 +2,8 @@
     h3{
         font-size: 1.2rem;
     }
+    .top-banner{
+        text-align:center;
     .nav-toggle{
         display: block;
         margin-right: 20px;
